--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
+    "stripe": "^20.0.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
